@startuml Projectile

interface ITeamMember
{
    +teamType : TeamType
}

abstract class Projectile
{
}

class ArmorPiercingBullet
{

}

class ExplosingBullet
{

}

class Missile
{

}

class NormalBullet
{

}

ITeamMember <|.. Projectile
Projectile <|-- NormalBullet
Projectile <|-- ExplosingBullet
Projectile <|-- Missile
Projectile <|-- ArmorPiercingBullet

@enduml